--- a/part2/puhelinluettelo/src/App.css
+++ b/part2/puhelinluettelo/src/App.css
@@ -14,8 +14,18 @@
   color: white;
 }
 
-.error {
+.success {
   color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
   background: lightgrey;
   font-size: 20px;
   border-style: solid;
