--- a/part5/bloglist-frontend/src/App.css
+++ b/part5/bloglist-frontend/src/App.css
@@ -12,3 +12,21 @@
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
 }
+
+.log-button {
+  margin: 1%
+}
+
+.blogContainer {
+  border: 1px solid black;
+  margin: 2vh;
+  text-align: left;
+}
+
+.blog-item {
+  margin:1%;
+}
+
+.blogContainer button {
+  margin-left: 1vw;
+}
