--- a/part8/graphql-frontend/src/App.css
+++ b/part8/graphql-frontend/src/App.css
@@ -2,3 +2,13 @@
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
+.form-select {
+  width: 40%;
+  float: left;
+  margin-right: 10px;
+}
+
+.login-inputfield {
+  width: 25%;
+}
